@@ -84,6 +84,8 @@ Version 1.4.1
 - CHG: When ignoring file(s) failed, the error message from Subversion is
        shown in full instead of just the simple message telling that it
        failed. (Stefan)
+- CHG: The root directory in the CSVNStatusListCtrl is shown as "." instead
+       of an empty string. (Kazutoshi Satoda)
 - BUG: When the bugtraq:message was set to "%BUGID%" only and the 
        bugtraq:number was set to "true", the log message from the
        'recent log messages' was inserted into the bug ID field instead of
